--- a/keychain/helper/keychain_helper.entitlements
+++ b/keychain/helper/keychain_helper.entitlements
@@ -7,10 +7,10 @@
         <true/>
         <key>com.apple.security.personal-information.keychain</key>
         <true/>
-        <!--<key>keychain-access-groups</key>
+        <key>keychain-access-groups</key>
         <array>
-            <string>$(AppIdentifierPrefix)io.cloudeng.KeychainHelper</string>
-        </array>-->
+            <string>84RRJLK9H4.io.cloudeng.KeychainHelper</string>
+        </array>
         <key>com.apple.security.get-task-allow</key>
         <true/>
     </dict>
