--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -12,3 +12,6 @@ permissions:
 jobs:
   test:
     uses: cloudengio/.github/.github/workflows/go-test-multimod.yml@main
+
+  lint:
+    uses: cloudengio/.github/.github/workflows/go-lint-multimod.yml@main
