--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -16,3 +16,9 @@ jobs:
       os-version: macos-latest
       go-versions: |
         [ "1.25.x" ]
+
+  lint:
+    uses: cloudengio/.github/.github/workflows/go-lint-multimod.yml@main
+    with:
+    os-version: macos-latest
+       go-version: "1.25.x"
