--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -31,9 +31,10 @@ jobs:
           CLOUDENG_KEYCHAIN_PROFILE: $RUNNER_TEMP/provisioning.profile
           CLOUDENG_DEVID: ${{ secrets.CLOUDENG_DEVID }}
         run: |
-          go install cloudeng.io/macos/cmd/gobundle@latest
-          cd go/cmd/keychain-plugin
-          go generate .
+          ls
+          #go install cloudeng.io/macos/cmd/gobundle@latest
+          #cd go/cmd/keychain-plugin
+          #go generate .
 
       - name: test
         run: multimod --config=.multimod.yaml test
