cmd/keychain: add tests and support for signing in CI

--- a/.multimod.yaml
+++ b/.multimod.yaml
@@ -1,3 +1,4 @@
+build: ["go", "build", "./..."]
 test: ["go", "test", "-failfast", "--covermode=atomic", "-race", "./..."]
 lint: ["golangci-lint", "run", "./..."]
 govuln: ["govulncheck", "./..."]
