--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -27,12 +27,13 @@ jobs:
           certificate-p12-base64: ${{ secrets.APPLE_SIGNING_CERTIFICATE }}
       - name: install keychain plugin
         env:
-          CLOUDENG_SIGNING: ${{ secrets.APPLE_SIGNING_CERTIFICATE }}
+          CLOUDENG_SIGNING: ${{ secrets.CLOUDENG_SIGNING }}
           CLOUDENG_KEYCHAIN_PROFILE: $RUNNER_TEMP/provisioning.profile
           CLOUDENG_DEVID: ${{ secrets.CLOUDENG_DEVID }}
           GOBUNDLE_VERBOSE: "yes"
         run: |
           security list-keychain -d user
+          security dump-keychain $(security list-keychain -d user)
           go install cloudeng.io/macos/cmd/gobundle@latest
           cd cmd/keychain-plugin
           go generate .
