cmd/keychain: add tests and support for signing in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -38,8 +38,8 @@ jobs:
           cd cmd/keychain-plugin
           go generate .
           codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
-          codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin
           codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
+          security cms -D -i /Users/runner/work/_temp/provisioning.profile
 
           macos-keychain-plugin --help
 
