--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -30,6 +30,7 @@ jobs:
           CLOUDENG_SIGNING: ${{ secrets.CLOUDENG_SIGNING }}
           CLOUDENG_KEYCHAIN_PROFILE: $RUNNER_TEMP/provisioning.profile
           CLOUDENG_DEVID: ${{ secrets.CLOUDENG_DEVID }}
+          CLOUDENG_KEYCHAIN_IDENTIFIER: "keychain-github"
           GOBUNDLE_VERBOSE: "yes"
         run: |
           security list-keychain -d user
