--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -33,16 +33,16 @@ jobs:
           CLOUDENG_KEYCHAIN_IDENTIFIER: "keychain-github"
           GOBUNDLE_VERBOSE: "yes"
         run: |
-          security list-keychain -d user
-          security dump-keychain $(security list-keychain -d user)
+          # security list-keychain -d user
+          # security dump-keychain $(security list-keychain -d user)
+
           go install cloudeng.io/macos/cmd/gobundle@latest
           cd cmd/keychain-plugin
           go generate .
-          codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
-          codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
-          security cms -D -i /Users/runner/work/_temp/provisioning.profile
 
-          macos-keychain-plugin --help
+          # codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
+          # codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
+          # security cms -D -i /Users/runner/work/_temp/provisioning.profile
 
       - name: test
         run: multimod --config=.multimod.yaml test
