cmd/keychain: add tests and support for signing in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,8 +37,7 @@ jobs:
           # security dump-keychain $(security list-keychain -d user)
 
           go install cloudeng.io/macos/cmd/gobundle@latest
-          cd cmd/keychain-plugin
-          go generate .
+          (cd cmd/keychain-plugin; go generate .)
 
           # codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
           # codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
