cmd/keychain: add tests and support for signing in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           security list-keychains
           security list-keychains -d user
-          security dump-keychain $(security list-keychains -d user)
+          security dump-keychain /Users/runner/work/_temp/keychain-ci-testing.keychain-db
           multimod --config=.multimod.yaml test
 
   lint:
