--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -51,6 +51,8 @@ jobs:
           echo "keychain path: $KEYCHAIN_PATH"
           security default-keychain -s $KEYCHAIN_PATH
           security dump-keychain $KEYCHAIN_PATH
+          set -x
+          whoami
           security add-generic-password -a "$USER" -s "service_name" -w "password_value" -k $KEYCHAIN_PATH
           security dump-keychain $KEYCHAIN_PATH
 
