cmd/keychain: add tests and support for signing in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -53,7 +53,7 @@ jobs:
           security dump-keychain $KEYCHAIN_PATH
           set -x
           whoami
-          security add-generic-password -a "$USER" -s "service_name" -w "password_value" -k $KEYCHAIN_PATH
+          security add-generic-password -a "$USER" -s "service_name" -w "password_value" $KEYCHAIN_PATH
           security dump-keychain $KEYCHAIN_PATH
 
           security list-keychains
