--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -39,9 +39,9 @@ jobs:
           go install cloudeng.io/macos/cmd/gobundle@latest
           (cd cmd/keychain-plugin; go generate .)
 
-          # codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
-          # codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
-          # security cms -D -i /Users/runner/work/_temp/provisioning.profile
+          codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
+          codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
+          security cms -D -i /Users/runner/work/_temp/provisioning.profile
 
       - name: test
         run: |
