--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -50,12 +50,13 @@ jobs:
           KEYCHAIN_PATH=$(security list-keychain -d user | tr -d '"')
           echo "keychain path: $KEYCHAIN_PATH"
           security default-keychain -s $KEYCHAIN_PATH
-          security dump-keychain $KEYCHAIN_PATH
-          set -x
-          whoami
-          security add-generic-password -a "$USER" -s "service_name" -w "password_value" $KEYCHAIN_PATH
-          security dump-keychain $KEYCHAIN_PATH
+          #security dump-keychain $KEYCHAIN_PATH
+          #security add-generic-password -a "$USER" -s "service_name" -w "password_value" $KEYCHAIN_PATH
+          #security dump-keychain $KEYCHAIN_PATH
 
+          security add-generic-password -a "$USER" -s "service_name" -w "password_value" $KEYCHAIN_PATH
+          security add-generic-password -a "$USER" -s "service_name_1" -w "password_value_1"
+          security dump-keychain $KEYCHAIN_PATH
           security list-keychains
           security default-keychain
           multimod --config=.multimod.yaml test || true
