cmd/keychain: add tests and support for signing in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -39,7 +39,7 @@ jobs:
 
           go install cloudeng.io/macos/cmd/gobundle@latest
           (cd cmd/keychain-plugin; go generate .)
-          macos-keychain-plugin --help
+          macos-keychain-plugin --help || true
 
           codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
           codesign -dv --entitlements - --xml /Users/runner/go/bin/macos-keychain-plugin 2>&1 | grep xml | tidy -xml -i -q
@@ -49,7 +49,7 @@ jobs:
         run: |
           security list-keychains
           security default-keychain
-          export KEYCHAIN_PATH="$(security list-keychain -d user | tr -d '"')"
+          export KEYCHAIN_PATH=$(security list-keychain -d user | tr -d '"' | sed 's/^ *//')
           echo "keychain path: $KEYCHAIN_PATH"
           security default-keychain -s $KEYCHAIN_PATH
 
