cmd/keychain: add tests and support for signing in CI

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -67,7 +67,7 @@ jobs:
 
           multimod --config=.multimod.yaml test || true
 
-          security dump-keychain
+          log show --debug -last 1m | grep keychain
 
           exit 1
 
