--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: cloudengio/.github/.github/actions/go@main
       - uses: cloudengio/.github/.github/actions/apple-keychain@macos-signing
+        id: create-keychain
         with:
           certificate-p12-base64: ${{ secrets.APPLE_SIGNING_CERTIFICATE }}
       - uses: cloudengio/.github/.github/actions/apple-provisioning@macos-signing
@@ -51,7 +52,7 @@ jobs:
         run: |
           set -x
 
-          KEYCHAIN_PATH=$(security list-keychain -d user | tr -d '"' | sed 's/^ *//')
+          KEYCHAIN_PATH=${{ steps.create-keychain.outputs.keychain-path }}
           security default-keychain -s $KEYCHAIN_PATH
           echo $KEYCHAIN_PATH
           echo "default keychain: $(security default-keychain)"
@@ -72,6 +73,12 @@ jobs:
 
           exit 1
 
+      - name: cleanup
+        if: always()
+        run: |
+          KEYCHAIN_PATH=${{ steps.create-keychain.outputs.keychain-path }}
+          echo "Deleting keychain at $KEYCHAIN_PATH"
+          security delete-keychain "$KEYCHAIN_PATH" || true
   lint:
     uses: cloudengio/.github/.github/workflows/go-lint-multimod.yml@main
     with:
