--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -68,8 +68,8 @@ jobs:
 
           cd cmd/keychain
           echo "yyy" > xxx
-          go run . write --keychain-type=file --name=test-key xxx
-          go run . read --keychain-type=file --name=test-key
+          go run . write --keychain-type=file --name=test-key xxx || true
+          go run . read --keychain-type=file --name=test-key || true
 
           #multimod --config=.multimod.yaml test || true
 
