--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -66,7 +66,8 @@ jobs:
           echo "without path"
           security dump-keychain | grep service_name
 
-          ls -la $(security default-keychain)
+          ls -la $(security default-keychain | tr -d '"')
+          ls -la /Users/runner/work/_temp/
           cd cmd/keychain
           echo "yyy" > xxx
           go run . write --keychain-accessibility=when-unlocked --keychain-type=file --name=test-key xxx || true
