--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -42,7 +42,8 @@ jobs:
           # security dump-keychain $(security list-keychain -d user)
 
           go install cloudeng.io/macos/cmd/gobundle@latest
-          (cd cmd/keychain-plugin; go generate .)
+          CUSTOM_KEYCHAIN_PATH=${{ steps.create-keychain.outputs.keychain-path }}
+          (cd cmd/keychain-plugin; GOBUNDLE_VERBOSE=yes go generate .)
           macos-keychain-plugin --help || true
 
           codesign -dv --verbose=4 /Users/runner/go/bin/macos-keychain-plugin
