--- a/cmd/keychain-plugin/gobundle-app.yml
+++ b/cmd/keychain-plugin/gobundle-app.yml
@@ -1,8 +1,10 @@
 identity: "${CLOUDENG_SIGNING}"
-profile: "${CLOUDENG_EXAMPLE_PROFILE}"
+profile: "${CLOUDENG_KEYCHAIN_PROFILE}"
 entitlements:
-   com.apple.security.app-sandbox: true
-   keychain-access-groups:
-     - "${CLOUDENG_DEVID}.*"
+  com.apple.security.app-sandbox: true
+  keychain-access-groups:
+    - "${CLOUDENG_DEVID}.*"
+  #com.apple.security.temporary-exception.files.absolute-path.read-write:
+  #  ["${CUSTOM_KEYCHAIN_PATH}"]
 info.plist:
-  CFBundleIdentifier: "${CLOUDENG_DEVID}.io.cloudeng.example"
+  CFBundleIdentifier: "${CLOUDENG_DEVID}.io.cloudeng.${CLOUDENG_KEYCHAIN_IDENTIFIER}"
