--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -65,5 +65,5 @@ jobs:
   lint:
     uses: cloudengio/.github/.github/workflows/go-lint-multimod.yml@main
     with:
-      os-version: macos-latest
+      runner: "macos-latest"
       go-version: "1.25.x"
